tests/snapshots/run_wpt_conformance__litert_linear_float16_1D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
linear.https.any.js linear float16 1D tensor default options, litert
 linear :: linear float16 1D tensor default options: index 0: actual=-0 expected=-1.1220703 ulp=15485 tolerance=4
  inputs: linearInput: [-1.1220703125, -6.60546875, -1.955078125, -4.59765625, 4.234375, 3.09765625, 3.74609375, -4.48828125, 6.40625, -4.35546875, -5.8203125, 3.720703125, -6.33203125, 8.578125, -6.765625, 6.43359375, -9.7109375, 2.642578125, 5.21484375, 9.65625, -8.71875, -0.453369140625, 9.9921875, -6.46875]
  expected linearOutput: [-1.1220703, -6.6054688, -1.9550781, -4.5976563, 4.234375, 3.0976563, 3.7460938, -4.4882813, 6.40625, -4.3554688 ...] (len=24)
  actual linearOutput: [-0, -0, -0, -0, 0, 0, 0, -0, 0, -0 ...] (len=24)
  expected linearOutput full nd:
[-1.1220703, -6.6054688, -1.9550781, -4.5976563, 4.234375, 3.0976563, 3.7460938, -4.4882813, 6.40625, -4.3554688, ...] (len=24, shape=[24])
  actual linearOutput full nd:
[-0, -0, -0, -0, 0, 0, 0, -0, 0, -0, ...] (len=24, shape=[24])

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    linearInput: f16[24];
  }

  nodes {
    [linearOutput] = linear(linearInput, alpha=1.0, beta=0.0, label="");
  }

  outputs { linearOutput; }
}
